--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=DiplomaAnahit
+spring.datasource.url=jdbc:mysql://localhost:13306/diploma
+spring.datasource.password=ANAHIT
+spring.datasource.username=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.open-in-view=true
