--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=DiplomaAnahit
-spring.datasource.url=jdbc:mysql://localhost:13306/diploma
+spring.datasource.url=jdbc:mysql://172.18.0.2:3306/diploma
 spring.datasource.password=ANAHIT
 spring.datasource.username=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
